--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,14 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  http: ^1.0.0
-  json_annotation: ^4.1.0
-  process: ^4.2.3
-  pub_semver: ^2.1.3
+  http: ^1.1.0
+  json_annotation: ^4.8.1
+  process: ^5.0.0
+  pub_semver: ^2.1.4
 
 dev_dependencies:
-  build_runner: ^2.1.2
-  json_serializable: ^6.5.3
-  mocktail: ^0.3.0
-  test: ^1.17.0
-  very_good_analysis: ^5.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
+  mocktail: ^1.0.0
+  test: ^1.24.6
+  very_good_analysis: ^5.0.0+1
