--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: pub_updater
 description: A Dart package which enables checking whether a package is up to date.
-version: 0.3.1
-homepage: https://github.com/VeryGoodOpenSource/pub_updater
+version: 0.4.0
+repository: https://github.com/open-runtime/pub_updater
+issue_tracker: https://github.com/VeryGoodOpenSource/pub_updater/issues
+topics: [cli, pub, version]
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -17,4 +19,4 @@ dev_dependencies:
   json_serializable: ^6.7.1
   mocktail: ^1.0.0
   test: ^1.24.6
-  very_good_analysis: ^5.0.0+1
+  very_good_analysis: ^5.1.0
