--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,17 +6,17 @@ issue_tracker: https://github.com/VeryGoodOpenSource/pub_updater/issues
 topics: [cli, pub, version]
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: '>=3.3.0 <4.5.0'
 
 dependencies:
   http: ^1.1.0
-  json_annotation: ^4.8.1
-  process: ^5.0.0
+  json_annotation: ^4.9.0
+  process: ^5.0.2
   pub_semver: ^2.1.4
 
 dev_dependencies:
-  build_runner: ^2.4.6
-  json_serializable: ^6.7.1
-  mocktail: ^1.0.0
-  test: ^1.24.6
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
+  mocktail: ^1.0.4
+  test: ^1.25.7
   very_good_analysis: ^5.1.0
